--- a/pkg/Morelinq.Portable.nuspec
+++ b/pkg/Morelinq.Portable.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>MoreLinq.Portable</id>
-        <version>1.0.16006</version>
+        <version>2.0.0-alpha02</version>
         <title>MoreLINQ (Portable)</title>
         <authors>MoreLINQ Developers</authors>
         <owners>Jon Skeet, Atif Aziz, Anders Gustafsson</owners>
@@ -10,7 +10,7 @@
         <projectUrl>http://code.google.com/p/morelinq/</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <summary>This Portable Class Library project enhances LINQ to Objects with extra methods, in a manner which keeps to the spirit of LINQ.</summary>
-        <description>This Portable Class Library project enhances LINQ to Objects with the following methods: Acquire, AssertCount, Batch, Concat, Consume, DistinctBy, EquiZip, ExceptBy, Fold, ForEach, Generate, GenerateByIndex, GroupAdjacent, Index, MaxBy, MinBy, Pad, Pairwise, Pipe, Prepend, PreScan, Scan, SingleOrFallback, SkipUntil, Split, TakeEvery, TakeLast, TakeUntil, ToDelimitedString, ToHashSet, Zip, ZipLongest</description>
+        <description>This Portable Class Library project enhances LINQ to Objects with the following methods: Acquire, Assert, AssertCount, Batch, Cartesian, Concat, Consume, DistinctBy, EquiZip, ExceptBy, Exclude, Fold, ForEach, Generate, GenerateByIndex, GroupAdjacent, Incremental, Index, Interleave, Lag, Lead, MaxBy, MinBy, NestedLoops, OrderBy, OrderedMerge, Pad, Pairwise, Partition, Permutations, Pipe, Prepend, PreScan, Random, RandomDouble, RandomSubset, Rank, RankBy, Repeat, RunLengthEncode, Scan, Segment, SingleOrFallback, SkipUntil, Slice, SortedMerge, Split, Subsets, TagFirstLast, TakeEvery, TakeLast, TakeUntil, ThenBy, ToDelimitedString, ToHashSet, Windowed, ZipLongest, ZipShortest</description>
         <language>en-US</language>
         <tags>linq extensions</tags>
         <releaseNotes>This Portable Class Library version of MoreLINQ is identical to the .NET version, except:
@@ -24,7 +24,9 @@ PCL profile 328 is used, i.e. the following targets are supported:
 * Windows Phone Silverlight 8 and higher
 * Silverlight 5
 * Xamarin.Android
-* Xamarin.iOS</releaseNotes>
+* Xamarin.iOS
+
+Adds new operators: Assert, Cartesian, Exclude, Incremental, Interleave, Lag, Lead, NestedLoops, OrderBy, OrderedMerge, Partition, Permutations, Random, RandomDouble, RandomSubset, Rank, RankBy, Repeat, RunLengthEncode, Segment, Slice, SortedMerge, Subsets, TagFirstLast, ThenBy, Windowed, ZipShortest. See also http://code.google.com/p/morelinq/wiki/ApiChanges. This is an ALPHA release so operators may be renamed, changed radically or removed in the final version.</releaseNotes>
     </metadata>
     <files>
         <file src="..\MoreLinq\bin\Portable\Release\*" target="lib\portable-net4+sl5+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1" />
